# vtc

./: .clang-format  .gitattributes  .gitignore  AUTHORS  CONTRIBUTORS  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README.md  autogen  compile_commands.json  configure  configure.ac  configure~  todo  todo.md
autoconf/: Makefile.am
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.3
cftl/: config.h  error.c  error.h  main.c  parse_args.c  parse_args.h  processor.c  processor.h  toplev.c  toplev.h
cftl/options/: options.h  parse_args.c
docs/: README.md  bnf.txt  include.md  prot.vl  spec.md  syscall.md
docs/design/en/: README
docs/design/en/alpha/: mod.md  spec.md
ftl/: add.ftl  config.h  error.h  lexer.c  lexer.h  main.c  module.c  module.h  output.h  parse_args.c  parse_args.h  parser.c  parser.h  processor.c  processor.h  toplev.c  toplev.h
ftl/error/: colors.c  debug.c  error.c  fatal.c  log.c  warning.c
ftl/testsuite/common/: alpha.ftl  exit.ftl  full.ftl  function.ftl  loops.ftl  math.ftl  print.ftl  prototype.ftl  syscall.ftl  total.ftl
ftl/testsuite/ftl/: comments.ftl
ftl/testsuite/ftl.src/error/: Makefile  test_error.c  test_fatalf.c
ftl/testsuite/ftl.src/libgo/: Makefile  test_libgo  test_libgo.c
ftl/testsuite/ftl.src/processor/: test_processor  test_processor.c
ftl/testsuite/ftlc/error/: Makefile
ftl/testsuite/ftlc/lexer/: Makefile  test_lexer  test_lexer.c
ftl/testsuite/ftlc/libgo/: Makefile  libgo.h  test_libgo  test_libgo.c
ftl/testsuite/prot/: math.ftl  sbp.ftl
ftl/testsuite/start/: exit.ftl
ftlcore/math/: math.def
ftlcore/stdlib/: stdlib.def
ftltools/fdoc/: fdoc.c
libgo/: Makefile  Makefile.am  README  configure.ac  go.mod
libgo/arch/x86_64/linux/: header.asm  header.go
libgo/go/: main.go
man/: Makefile.am  cmod.1  fdoc.1  ftl.1  vtc.1
manual/: ftl.1
static/: libgo-linuxx64.h
tools/: add-header  check-copyrigh-headers  check-copyright-headers  format  header.sh  lint
vlibf/math/: math.ftl
vtc/: Makefile.am  config.h  error.h  generation.c  generation.h  lexer.c  lexer.h  main.c  parse_args.c  parse_args.h  parser.c  parser.h  processor.c  processor.h  toplev.c  toplev.h
vtc/.deps/: generation.Po  lexer.Po  main.Po  parse_args.Po  processor.Po  toplev.Po
vtc/error/: colors.c  debug.c  error.c  fatal.c  log.c  warning.c
vtc/syslog/: colors.c  debug.c  error.c  error.h  fatal.c  log.c  warning.c
vtc/syslog/.deps/: colors.Po  debug.Po  error.Po  fatal.Po  log.Po  warning.Po
vtc/testsuite/vtc/: comments.vl  exit.vl  hang.vl  import.vl  main.vl  syscall.vl
vtc/testsuite/vtc.src/error/: Makefile  test_error  test_error.c  test_fatalf  test_fatalf.c
vtc/testsuite/vtc.src/generator/: Makefile  test_generation.c
vtc/testsuite/vtc.src/lexer/: test_lexer.c
vtc/testsuite/vtc.src/libgo/: test_libgo.c
vtc/testsuite/vtc.src/processor/: Makefile  test_processor.c
