bin_PROGRAMS = vtc
vtc_SOURCES = vtc/main.c vtc/generation.c vtc/lexer.c vtc/parse_args.c vtc/processor.c vtc/toplev.c vtc/syslog/colors.c vtc/syslog/debug.c vtc/syslog/error.c vtc/syslog/fatal.c vtc/syslog/log.c vtc/syslog/warning.c

clean-local:
	@rm config.status configure config.log
	@rm -r autom4te.cache/
	@rm aclocal.m4
	@rm compile install-sh missing Makefile.in